--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,7 +8,7 @@ italic_font      auto
 #italic_offset    0
 # colors
 
-background #061115
+#background #061115
 #foreground #0000ffff0000
 foreground #7cff00
 #foreground #8DF50A
@@ -68,29 +68,42 @@ map f2 paste_from_buffer a
 map f3 copy_to_buffer b
 map f4 paste_from_buffer b
 
-# normal
-color0 #1c252c
-color1 #df5b61
-color2 #78b892
-color3 #de8f78
-color4 #6791c9
-color5 #bc83e3
-color6 #67afc1
-color7 #d9d7d6
 
-# bright
-color8 #484e5b
-color9 #f16269
-color10 #8cd7aa
-color11 #e9967e
-color12 #79aaeb
-color13 #c488ec
-color14 #7acfe4
-color15 #e5e5e5
+# ========== ANSI Colors ==========
+color0   #0a0f0a   
+color1   #df5b61   
+color2   #12d50e  
+color3   #b3ff00   
+color4   #6791c9   
+color5   #bc83e3   
+color6   #00ffd2   
+color7   #d9e0ee   
+
+# ========== Bright Colors ==========
+color8   #262a2e   
+color9   #ff477f   
+color10  #77ff00   
+color11  #ccff00   
+color12  #33ccff   
+color13  #ff77ff   
+color14  #00ffff   
+color15  #ffffff   
+
+
+# normal
+#color0 #1c252c
+#color1 #df5b61
+#color2 #78b892
+#color3 #de8f78
+#color4 #6791c9
+#color5 #bc83e3
+#color6 #00ffd2
+#color7 #d9d7d6
+
 
 # extended colors
-color16 #ff9e64
-color17 #db4b4b
+#color16 #ff9e64
+#color17 #db4b4b
 
 tab_bar_edge left
 tab_bar_style powerline
