--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -72,7 +72,7 @@ map f4 paste_from_buffer b
 # ========== ANSI Colors ==========
 color0   #0a0f0a   
 color1   #df5b61   
-color2   #12d50e  
+color2   #65e700  
 color3   #b3ff00   
 color4   #6791c9   
 color5   #bc83e3   
@@ -113,7 +113,7 @@ map ctrl+shift+m toggle_layout stack
 single_window_margin_width -1
 #window_margin_width 6
 window_padding_width 2
-#window_padding_height 15
+window_padding_height 15
 tab_bar_margin_width 0
 
 
